# nfid-wallet-server

./: .gitignore  .mocharc.json  Cargo.toml  README.md  canister_ids.json  demo.sh  demo2.sh  dfx.json  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vault.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CI_LIBS.sh  address_book.yml  backup.yml  brl_backup.yml  brl_list.yml  brl_restore.yml  cron_backup_ecdsa_signer.yml  cron_backup_ecdsa_signer_btc.yml  cron_backup_identity_manager.yml  cron_backup_internet_identity.yml  cron_backup_signer_btc.yml  cron_backup_signer_eth copy.yml  cron_backup_signer_eth.yml  cron_backup_signer_ic.yml  cron_backup_sync.yml  cron_backup_vault.yml  cron_internet_identity_test.yml  delegation_factory.yml  dev_identity_manager.yml  dev_pubsub_channel.yml  dfx-provision-linux.sh  dfx_install.sh  docker-test.yml  eth_secret_storage_self.yml  get_accounts.yml  icrc1_oracle.yml  icrc1_registry.yml  icrc1_self.yml  identity_manager.yml  identity_manager_self.yml  ii_wasm_scheduled_deploy.yml  im_backup.yml  im_rebuild_index.yml  main.yml  new_scenario.yml  nfid_storage.yml  prod_identity_manager.yml  prod_pubsub_channel.yml  pub_sub.yml  pub_sub_self.yml  (+14 more)
admin_oracle/: admin_CLI.ts  admin_manager.ts  chain_fusion.ts  chain_fusion_testnet.ts  constants.ts  dev.utils.ts  discovery_apps.csv  metadata_service.ts  native.ts  sendList.csv  sns-governance.api.ts  sns-wrapper.api.ts  sns.ts  types.ts  util.ts
admin_oracle/discovery/: discovery.client.ts  discovery.container.ts  discovery.mapper.ts  discovery.service.ts  index.ts  types.ts
admin_oracle/idl/: icrc1.idl.ts  icrc1.ts
identity-manager-itest/: README.md  pom.xml
script/: rebuild-index.sh
src/address_book/: Cargo.toml  address_book.did  build.sh
src/bitcoin/: Cargo.toml  build.sh
src/delegation_factory/: Cargo.toml  build.sh  delegation_factory.did
src/delegation_factory/src/: delegation.rs  hash.rs  lib.rs  main.rs  state.rs
src/ecdsa_signer/: Cargo.toml  build.sh  ecdsa_signer.did
src/ecdsa_storage/: Cargo.toml  build.sh  ecdsa_storage.did
src/eth_secret_storage/: Cargo.toml  build.sh  eth_secret_storage.did  eth_secret_storage.old.did
src/eth_secret_storage/src/: main.rs
src/eth_secret_storage/src/constant/: constant.rs
src/eth_secret_storage/src/repository/: configuration_repo.rs  mod.rs  secret_repo.rs
src/eth_secret_storage/src/service/: mod.rs  response_service.rs  secret_service.rs
src/icrc1_oracle/: Cargo.toml  build.sh  icrc1_oracle.did
src/icrc1_oracle/src/: lib.rs  signer.rs  timer_service.rs
src/icrc1_registry/: Cargo.toml  build.sh  icrc1_registry.did
src/identity_manager/: Cargo.toml  build.sh  identity_manager.did
src/identity_manager/src/: main.rs
src/identity_manager/src/container/: container_wrapper.rs  mod.rs
src/identity_manager/src/http/: mod.rs  requests.rs  response_mapper.rs
src/identity_manager/src/logger/: logger.rs
src/identity_manager/src/mapper/: access_point_mapper.rs  account_mapper.rs  mod.rs  persona_mapper.rs
src/identity_manager/src/repository/: access_point_repo.rs  account_repo.rs  application_repo.rs  encrypted_repo.rs  mod.rs  persona_repo.rs  phone_number_repo.rs  repo.rs  token_repo.rs
src/identity_manager/src/repository/encrypt/: account_encrypt.rs  encrypted_repo.rs  mod.rs
src/identity_manager/src/service/: access_point_service.rs  account_service.rs  application_service.rs  certified_service.rs  credential_service.rs  device_index_service.rs  device_service.rs  email_validation_service.rs  http_outcall_service.rs  ic_service.rs  mod.rs  persona_service.rs  phone_number_index_service.rs  phone_number_service.rs  principle_service.rs  replica_service.rs  security_service.rs  token_service.rs
src/identity_manager/src/structure/: mod.rs  ttl_hashmap.rs  ttlhashmap.rs
src/identity_manager/src/tests/: account_encrypt_test.rs  mod.rs  repo_encrypt_test.rs  repo_test.rs  test_util.rs  validation_util_test.rs
src/identity_manager/src/tests/service/: access_point_service_test.rs  account_service_test.rs  mod.rs
src/identity_manager/src/util/: captcha.rs  mod.rs  validation_util.rs
src/im_addition/: Cargo.toml  build.sh  im_addition.did
src/internet_identity_test/: internet_identity.did
src/libraries/canister_api_macros/: Cargo.toml
src/libraries/canister_api_macros/src/: lib.rs
src/nfid_storage/: Cargo.toml  build.sh  nfid_storage.did
src/pub_sub_channel/: Cargo.toml  build.sh  pub_sub_channel.did
src/swap_trs_storage/: Cargo.toml  build.sh  swap_trs_storage.did
src/test_canister/: Cargo.toml  build.sh  test_canister.did
src/user_registry/: Cargo.toml  build.sh  user_registry.did
src/vault/: Cargo.toml  vault.did
src/vault/src/: enums.rs  lib.rs  memory.rs  notification_service.rs  policy_service.rs  repo.rs  request.rs  security_service.rs  transaction_service.rs  transfer_service.rs  user_service.rs  util.rs  vault_service.rs  wallet_service.rs
src/verifier/: Cargo.toml  build.sh  verifier.did
test/: access_point.test.ts  account.test.ts  address_book.test.ts  application.test.ts  bitcoin.test.ts  common.test.ts  configuration.test.ts  delegation_factory.test.ts  discovery.test.ts  ecdsa-signer.test.ts  elliptic-types.ts  eth-secret-storage.test.ts  eth.test.ts  hooks.mjs  icrc1_oracle.test.ts  icrc1_registry.test.ts  nfid_storage.test.ts  policy.test.ts  swap_trs_storage.test.ts  transaction.test.ts  user_registry.test.ts  vault.test.ts  wallet.test.ts
test/admin/: admin_CLI.ts  admin_manager.ts  chain_fusion.ts  chain_fusion_testnet.ts  constants.ts  metadata_service.ts  native.ts  sns.ts  types.ts  util.ts
test/constanst/: app.enum.ts  deploy.builder.ts  dfx.const.ts  expected.const.ts
test/idl/: address_book.ts  address_book_idl.ts  bitcoin.ts  bitcoin_idl.ts  delegation_factory.ts  delegation_factory_idl.ts  ecdsa.ts  ecdsa_idl.ts  eth_secret_storage.ts  eth_secret_storage_idl.ts  icrc1_oracle.ts  icrc1_oracle_idl.ts  icrc1_registry.ts  icrc1_registry_idl.ts  identity_manager.ts  identity_manager_idl.ts  (+10 more)
tests/: configuration.test.ts
(+238 files in other folders)
