[workspace]
resolver = "2"

members = [
    "src/identity_manager",
    "src/user_registry",
    "src/icrc1_oracle",
    "src/delegation_factory",
    "src/nfid_storage",
    "src/ecdsa_storage",
    "src/swap_trs_storage",
    "src/vault",
    "src/libraries/canister_api_macros",
]
exclude = ["src/test_canister", "src/ecdsa_signer"]