[package]
name = "eth_secret_storage"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
ic-cdk = "0.3.2"
ic-cdk-macros = "0.3.3"
ic-types = "0.1.1"
serde = "1"
imp = "0.1.0"
canister_api_macros = { path = "../libraries/canister_api_macros" }
canistergeek_ic_rust = "0.2.2"
# ic-web3 = { git = "https://github.com/rocklabs-io/ic-web3" }
# web3 = { version = "0.18.0", default-features = false, features = ["wasm", "signing"] }
ethers-signers = "1.0.2"
ethers-core = "1.0.2"

# [patch.crates-io]
# getrandom = { version = "0.2", features = ["custom"] }