[package]
name = "eth_secret_storage"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["custom"]}
hex = "0.4.3"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
ic-types = "0.7.0"
candid = "0.8.4"
serde = "1"
canister_api_macros = { path = "../libraries/canister_api_macros" }
canistergeek_ic_rust = "0.3.0"
ethers-core = "1.0.2"