[package]
name = "identity_manager"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
proc-macro = true

[dependencies]
candid = "0.10"
candid_parser = "0.1.2"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
ic-types = "0.7.0"
serde = "1"
regex = "1"
lazy_static = "1.4.0"
magic-crypt = "4.0.1"
base64 = "0.22.1"
inject = "0.1.3"
mockers = "0.23.0"
canister_api_macros = { path = "../libraries/canister_api_macros" }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_with = "3.11.0"
itertools = "0.13.0"
async-trait = "0.1.53"
async-std = { version = "1.7.0", features = ["attributes"] }
log = "0.4.17"
serde_json = "1.0.133"
ic0 = "0.23.0"
ic-certified-map = "0.4.0"
anyhow = "1.0.93"
hex = "0.4.3"
sha256 = "1.5.0"