[package]
name = "identity_manager"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
proc-macro = true

[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[dependencies]
candid = "0.10"
candid_parser = "0.1.2"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
ic-types = "0.7.0"
serde = "1"
regex = "1"
lazy_static = "1.4.0"
magic-crypt = "3.1.9"
base64 = "0.22.1"
inject = "0.1.3"
mockers = "0.23.0"
canister_api_macros = { path = "../libraries/canister_api_macros" }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_with = "3.11.0"
itertools = "0.13.0"
async-trait = "0.1.53"
async-std = { version = "1.7.0", features = ["attributes"] }
log = "0.4.17"
serde_json = "1.0.82"
ic0 = "0.21.1"
ic-certified-map = "0.3.2"
anyhow = "1.0.71"
hex = "0.4.3"
sha256 = "1.1.1"
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "*", default-features = false }
captcha = { git = "https://github.com/dfinity/captcha", rev = "9c0d2dd9bf519e255eaa239d9f4e9fdc83f65391" }