[package]
name = "vault"
version = "0.1.0"
edition = "2018"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.7.4"

[dependencies]
bytemuck = "1.12.3"
candid = "0.7.4"
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
ic-ledger-types = "0.1.2"
serde = "1"
byteorder = "1.4.3"

[dev-dependencies]
tempfile = "3.2.0"