[package]
name = "vault"
version = "0.1.0"
edition = "2018"

## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[build-dependencies]
candid = "0.10.10"

[dependencies]
bytemuck = "1.21.0"
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-macros = "0.16"
ic-ledger-types = "0.13.0"
serde = "1"
byteorder = "1.4.3"
ic-certified-map = "0.4"
ic-stable-structures = "0.6.5"
hex = "0.4.3"
sha2 = "0.10.8"
crc32fast = "1.2.0"
serde_bytes = "0.11"
maplit = "1.0.2"
serde_json = "1.0.137"
[dev-dependencies]
tempfile = "3.15.0"