[package]
name = "canister_api_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.10"
syn = "2.0.79"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
ic-types = "0.7.0"
serde = "1"
